--- a/event/event.scss
+++ b/event/event.scss
@@ -1,32 +1,33 @@
 body {
-  box-sizing: border-box;
-  display: flex;
+    box-sizing: border-box;
+    display: flex;
 
-  div {
-    width: 400px;
-    min-height: 200px;
-    &:first-of-type {
-      border: 1px solid blue;
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      button {
-        width: 150px;
-        height: 50px;
-        font-size: 1.2rem;
-        border-radius: 5px;
-      }
+    div {
+        width: 400px;
+        min-height: 200px;
+        &:first-of-type {
+            border: 1px solid blue;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            button {
+                width: 150px;
+                height: 50px;
+                font-size: 1.2rem;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+        }
+        &:nth-of-type(2) {
+            border: 1px solid red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            p {
+                font-weight: bold;
+                text-align: center;
+                font-size: 1.5rem;
+            }
+        }
     }
-    &:nth-of-type(2) {
-      border: 1px solid red;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      p {
-        font-weight: bold;
-        text-align: center;
-        font-size: 1.5rem;
-      }
-    }
-  }
 }
