font sans serif

--- a/event/event.scss
+++ b/event/event.scss
@@ -1,7 +1,7 @@
 body {
     box-sizing: border-box;
     display: flex;
-
+    font-family: sans-serif;
     div {
         width: 400px;
         min-height: 200px;
